// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AWS Error Object 1`] = `
Array [
  Object {
    "err": Object {
      "message": "Ded 3",
      "name": "Error",
      "stack": "Error: Ded 3
    at Object.<anonymous> (<rootDir>/block65_logger/__tests__/aws.test.js:31:22)
    at Promise.then.completed (/home/mholman/.cache/bazel/_bazel_mholman/1dfa35029879bd5cb9da0a7a69891045/execroot/block65_logger/bazel-out/k8-fastbuild/bin/external/npm/node_modules/jest-circus/build/utils.js:391:28)
    at new Promise (<anonymous>)",
    },
    "hostname": "testhost",
    "level": 50,
    "msg": "Ded 3",
    "pid": 1337,
    "time": 1234567890000,
  },
]
`;

exports[`AWS Lambda Error Object 1`] = `
Array [
  Object {
    "err": Object {
      "message": "Ded 4",
      "name": "Error",
      "stack": "Error: Ded 4
    at Object.<anonymous> (<rootDir>/block65_logger/__tests__/aws.test.js:24:22)
    at Promise.then.completed (/home/mholman/.cache/bazel/_bazel_mholman/1dfa35029879bd5cb9da0a7a69891045/execroot/block65_logger/bazel-out/k8-fastbuild/bin/external/npm/node_modules/jest-circus/build/utils.js:391:28)
    at new Promise (<anonymous>)",
    },
    "level": 50,
    "msg": "Ded 4",
    "time": 1234567890000,
  },
]
`;

exports[`AWS Lambda Logger + contextId 1`] = `
Array [
  Object {
    "_context": Object {
      "stuff": true,
    },
    "_contextId": "fake-aws-request-id",
    "hostname": "testhost",
    "level": 40,
    "msg": "hello",
    "pid": 1337,
    "time": 1234567890000,
  },
]
`;
